--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "jsrsasign": "^11.1.0",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.542.0",
+    "mermaid": "^11.12.1",
     "motion": "^12.23.12",
     "next": "16.0.1",
     "next-themes": "^0.4.6",
